--- a/assets/sass/partials/_socialoutlets.scss
+++ b/assets/sass/partials/_socialoutlets.scss
@@ -32,6 +32,9 @@
 		width: 40px;
 		margin-right: 8px;
 	}
+	.user-profile-details {
+		margin-left: 48px;
+	}
 	.post-user-name {
 		font-weight: bold;
 		color: $fb-link;
